<resources>
    <string name="app_name">Petagram</string>
    <string name="nombre">Mía</string>
    <string name="tel">3815192371</string>
    <string name="email">virsantillan98@hotmail.com.ar</string>
    <string name="emaildescr">Icono Email</string>
    <string name="teldesc">Icono Telefono</string>
    <string name="pnombre">nombre</string>
    <string name="rank">Ranking</string>
    <string name="pemail">email</string>
    <string name="like">Like btn</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_acerca">Acerca de</string>
    <string name="toolbar">Petagram</string>

    <string name="fnombre">Nombre</string>
    <string name="femail">Email</string>
    <string name="fmensaje">Mensaje</string>
    <string name="fasunto">Prueba Android</string>
    <string name="enviar_comentario">Enviar comentario</string>

    <string name="infoBio">Petagram es una aplicación desarrollada por MVS en el año 2021. </string>
    <string name="infoBio2">Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac,
        enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.
        Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. </string>

    <string name="nombrePerfil">Felipe</string>



</resources>